[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Player.png" type="Texture" id=1]
[ext_resource path="res://Actors/Shanker/Shanker.gd" type="Script" id=2]
[ext_resource path="res://Actors/Generic/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Generic/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/Generic/DetectionZone.gd" type="Script" id=5]
[ext_resource path="res://Actors/Generic/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Actors/Generic/FiringRange.gd" type="Script" id=7]
[ext_resource path="res://Assets/TGBA swipe.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 52.0389

[sub_resource type="CircleShape2D" id=3]
radius = 197.236

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 19.3882
height = 23.4287

[sub_resource type="Animation" id=6]
resource_name = "Death"
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("MeleeHitbox/hitboxCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/hitboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26, 0.28, 0.3, 0.32, 0.34, 0.36, 0.38, 0.4, 0.42, 0.44, 0.46, 0.48, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 0.0, 90.0, 180.0, 270.0, 0.0, 90.0, 180.0, 270.0, 0.0, 90.0, 180.0, 270.0, 0.0, 90.0, 180.0, 270.0, 0.0, 90.0, 180.0, 270.0, 0.0, 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/hitboxCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hurtbox/hurtboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.81
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Swipe:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7, 0.71, 0.72, 0.73, 0.74, 0.75, 0.76, 0.77, 0.78, 0.79, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeleeHitbox/hitboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.72, 0.77 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 0.81 ),
"transitions": PoolRealArray( 0.574349, 1, 1 ),
"update": 0,
"values": [ Color( 0.862745, 0.568627, 0.227451, 1 ), Color( 0.847059, 0.192157, 0.192157, 1 ), Color( 0.862745, 0.568627, 0.227451, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 0.81 ),
"transitions": PoolRealArray( 0.574349, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="Shanker" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.862745, 0.568627, 0.227451, 1 )
rotation = 1.5708
scale = Vector2( 0.640004, 0.640004 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 32
collision_mask = 0

[node name="Stats" parent="." instance=ExtResource( 4 )]
maxHealth = 7

[node name="MeleeRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeRange"]
shape = SubResource( 2 )

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
scale = Vector2( 0.996618, 1 )
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 16

[node name="hitboxCollision" parent="Hitbox" index="0"]
shape = SubResource( 4 )
disabled = true

[node name="Swipe" type="Sprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 1.90284, 2.07774 )
texture = ExtResource( 9 )
flip_h = true
hframes = 10

[node name="MeleeHitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 16

[node name="hitboxCollision" parent="MeleeHitbox" index="0"]
position = Vector2( 0, -35.391 )
shape = SubResource( 5 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Death = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/MeleeAttack = SubResource( 8 )
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="noHealth" from="Stats" to="." method="_on_Stats_noHealth"]
[connection signal="body_entered" from="DetectionZone" to="DetectionZone" method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="DetectionZone" method="_on_DetectionZone_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="hurtbox"]

[editable path="Hitbox"]

[editable path="MeleeHitbox"]
